--- a/src/views/offersView.fxml
+++ b/src/views/offersView.fxml
@@ -8,7 +8,7 @@
 
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="canvas.Canvas"
+            fx:controller="controllers.OffersController"
             prefHeight="400.0" prefWidth="600.0">
 
 </AnchorPane>
