Zoom finally working

--- a/src/views/canvasView.fxml
+++ b/src/views/canvasView.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
+<?import javafx.scene.shape.Rectangle?>
 <AnchorPane prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.CanvasController">
     <BorderPane>
         <top>
@@ -27,16 +28,16 @@
             </ToolBar>
         </top>
         <center>
-            <BorderPane>
-                <center>
-                    <AnchorPane fx:id="pane" prefHeight="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="40.0" />
-                </center>
-                <right>
-                    <AnchorPane fx:id="sideBar" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="40.0">
-                        <fx:include fx:id="idShapeEdit" source="shapeEdit.fxml"/>
-                    </AnchorPane>
-                </right>
-            </BorderPane>
+            <ScrollPane fx:id="scrollPane" hbarPolicy="NEVER" vbarPolicy="NEVER" maxHeight="560.0" maxWidth="600.0">
+                <content>
+                    <Pane fx:id="pane" minHeight="2240" minWidth="2400.0"  maxHeight="2240" maxWidth="2400.0" style="-fx-background-color: white"/>
+                </content>
+            </ScrollPane>
         </center>
+        <right>
+            <AnchorPane fx:id="sideBar" prefHeight="600.0" maxWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="40.0">
+                <fx:include fx:id="idShapeEdit" source="shapeEdit.fxml" />
+            </AnchorPane>
+        </right>
       </BorderPane>
 </AnchorPane>
