--- a/src/views/canvasView.fxml
+++ b/src/views/canvasView.fxml
@@ -5,14 +5,17 @@
 <?import javafx.scene.text.*?>
 
 <?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.chart.LineChart?>
+<?import javafx.scene.chart.NumberAxis?>
 <AnchorPane prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.CanvasController">
     <BorderPane>
         <top>
             <ToolBar prefHeight="40.0" prefWidth="900.0">
                 <items>
-                    <Button fx:id="createPoint" mnemonicParsing="false" onAction="#createPoint" text="Insert points" />
+                    <Button fx:id="createPoint" mnemonicParsing="false" onAction="#createPoint" text="Insert point" />
+                    <Button fx:id="createMultiPoint" mnemonicParsing="false" onAction="#createMultiPoint" text="Insert multiPoint" />
                     <Button fx:id="createPolyLine" mnemonicParsing="false" onAction="#createPolyLine" text="Insert polyline" />
-                    <Button fx:id="createPolygonButton" mnemonicParsing="false" onAction="#createArea" text="Insert polygons" />
+                    <Button fx:id="createPolygonButton" mnemonicParsing="false" onAction="#createArea" text="Insert polygon" />
                     <Button fx:id="editButton" mnemonicParsing="false" onAction="#editMode" text="Edit Mode" />
                     <Button fx:id="clearCanvasButton" mnemonicParsing="false" onAction="#clearCanvas" style="-fx-background-color: red;" text="Clear Canvas" textFill="WHITE">
                         <font>
@@ -30,7 +33,8 @@
         <center>
             <ScrollPane fx:id="scrollPane" hbarPolicy="NEVER" vbarPolicy="NEVER" maxHeight="560.0" maxWidth="600.0">
                 <content>
-                    <Pane fx:id="pane" minHeight="2240" minWidth="2400.0"  maxHeight="2240" maxWidth="2400.0" style="-fx-background-color: white"/>
+                    <Pane fx:id="pane" minHeight="2240" minWidth="2400.0"  maxHeight="2240" maxWidth="2400.0" style="-fx-background-color: white">
+                    </Pane>
                 </content>
             </ScrollPane>
         </center>
