--- a/src/views/canvasView.fxml
+++ b/src/views/canvasView.fxml
@@ -9,6 +9,7 @@
         <top>
             <ToolBar prefHeight="40.0" prefWidth="900.0">
                 <items>
+                    <Button fx:id="viewButton" mnemonicParsing="false" onAction="#viewMode" text="View mode" />
                     <Button fx:id="createPoint" mnemonicParsing="false" onAction="#createPoint" text="Insert point" />
                     <Button fx:id="createMultiPoint" mnemonicParsing="false" onAction="#createMultiPoint" text="Insert multiPoint" />
                     <Button fx:id="createPolyLine" mnemonicParsing="false" onAction="#createPolyLine" text="Insert polyline" />
@@ -28,9 +29,9 @@
             </ToolBar>
         </top>
         <center>
-            <ScrollPane fx:id="scrollPane" hbarPolicy="NEVER" maxHeight="560.0" maxWidth="600.0" vbarPolicy="NEVER">
+            <ScrollPane fx:id="scrollPane" hbarPolicy="NEVER" vbarPolicy="NEVER" minHeight="560.0" minWidth="600.0" fitToHeight="true" fitToWidth="true">
                 <content>
-                    <Pane fx:id="pane" maxHeight="2240" maxWidth="2400.0" minHeight="2240" minWidth="2400.0" style="-fx-background-color: white">
+                    <Pane fx:id="pane" maxHeight="1200" maxWidth="1600.0" minHeight="1000" minWidth="1000.0" style="-fx-background-color: #fafafa">
                     </Pane>
                 </content>
             </ScrollPane>
@@ -40,5 +41,24 @@
                 <fx:include fx:id="idShapeEdit" source="shapeEdit.fxml" />
             </AnchorPane>
         </right>
+        <bottom>
+           <HBox>
+               <Label fx:id="scaleAmountLabel" prefHeight="14.0" prefWidth="100.0" text="Zoom Level: 100%;">
+                   <font>
+                       <Font name="System Bold" size="12.0" />
+                   </font>
+               </Label>
+               <Label fx:id="mouseCoordinateLabel" prefHeight="14.0" prefWidth="300.0" text="Mouse Position;">
+                   <font>
+                       <Font size="12.0" />
+                   </font>
+               </Label>
+               <Label fx:id="canvasStateLabel" prefHeight="14.0" prefWidth="150.0" text="Current mode:">
+                   <font>
+                       <Font name="System Bold" size="14.0" />
+                   </font>
+               </Label>
+           </HBox>
+        </bottom>
       </BorderPane>
 </AnchorPane>
