--- a/src/views/canvasView.fxml
+++ b/src/views/canvasView.fxml
@@ -1,64 +1,91 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.*?>
+<?import javafx.scene.effect.*?>
+<?import java.lang.*?>
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
+<?import javafx.geometry.Insets?>
 
-<AnchorPane prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.CanvasController">
-    <BorderPane>
-        <top>
-            <ToolBar prefHeight="40.0" prefWidth="900.0">
-                <items>
-                    <Button fx:id="viewButton" mnemonicParsing="false" onAction="#viewMode" text="View mode" />
-                    <Button fx:id="createPoint" mnemonicParsing="false" onAction="#createPoint" text="Insert point" />
-                    <Button fx:id="createMultiPoint" mnemonicParsing="false" onAction="#createMultiPoint" text="Insert multiPoint" />
-                    <Button fx:id="createPolyLine" mnemonicParsing="false" onAction="#createPolyLine" text="Insert polyline" />
-                    <Button fx:id="createPolygonButton" mnemonicParsing="false" onAction="#createArea" text="Insert polygon" />
-                    <Button fx:id="editButton" mnemonicParsing="false" onAction="#editMode" text="Edit Mode" />
-                    <Button fx:id="clearCanvasButton" mnemonicParsing="false" onAction="#clearCanvas" style="-fx-background-color: red;" text="Clear Canvas" textFill="WHITE">
-                        <font>
-                            <Font name="System Bold" size="14.0" />
-                        </font>
-                    </Button>
-                    <Label fx:id="canvasLabel" prefHeight="17.0" prefWidth="477.0" text="This is canvasView">
-                        <font>
-                            <Font size="16.0" />
-                        </font>
-                    </Label>
-                </items>
-            </ToolBar>
-        </top>
-        <center>
-            <ScrollPane fx:id="scrollPane" hbarPolicy="NEVER" vbarPolicy="NEVER" minHeight="560.0" minWidth="600.0" fitToHeight="true" fitToWidth="true">
-                <content>
-                    <Pane fx:id="pane" maxHeight="1200" maxWidth="1600.0" minHeight="1000" minWidth="1000.0" style="-fx-background-color: #fafafa">
-                    </Pane>
-                </content>
-            </ScrollPane>
-        </center>
-        <right>
-            <AnchorPane fx:id="sideBar" maxWidth="200.0" prefHeight="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="40.0">
-                <fx:include fx:id="idShapeEdit" source="shapeEdit.fxml" />
-            </AnchorPane>
-        </right>
-        <bottom>
-           <HBox>
-               <Label fx:id="scaleAmountLabel" prefHeight="14.0" prefWidth="100.0" text="Zoom Level: 100%;">
-                   <font>
-                       <Font name="System Bold" size="12.0" />
-                   </font>
-               </Label>
-               <Label fx:id="mouseCoordinateLabel" prefHeight="14.0" prefWidth="300.0" text="Mouse Position;">
-                   <font>
-                       <Font size="12.0" />
-                   </font>
-               </Label>
-               <Label fx:id="canvasStateLabel" prefHeight="14.0" prefWidth="150.0" text="Current mode:">
-                   <font>
-                       <Font name="System Bold" size="14.0" />
-                   </font>
-               </Label>
-           </HBox>
-        </bottom>
-      </BorderPane>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="700.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.CanvasController">
+   <children>
+       <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="900.0" style="-fx-background-color: #2f3136;">
+           <top>
+               <ToolBar maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="40.0" prefWidth="900.0" style="-fx-background-color: #36393f;" BorderPane.alignment="TOP_LEFT">
+                   <items>
+                       <Button fx:id="viewButton" mnemonicParsing="false" onAction="#viewMode" style="-fx-background-color: orange;" text="View mode" textFill="WHITE" />
+                       <Button fx:id="editButton" mnemonicParsing="false" onAction="#editMode" style="-fx-background-color: green;" text="Edit Mode" textFill="WHITE" />
+                       <Button fx:id="createPoint" mnemonicParsing="false" onAction="#createPoint" text="Insert point" />
+                       <Button fx:id="createMultiPoint" mnemonicParsing="false" onAction="#createMultiPoint" text="Insert multiPoint" />
+                       <Button fx:id="createPolyLine" mnemonicParsing="false" onAction="#createPolyLine" text="Insert polyline" />
+                       <Button fx:id="createPolygonButton" mnemonicParsing="false" onAction="#createArea" text="Insert polygon" />
+                       <Button fx:id="clearCanvasButton" mnemonicParsing="false" onAction="#clearCanvas" style="-fx-background-color: red;" text="Clear Canvas" textFill="WHITE">
+                           <font>
+                               <Font name="System Bold" size="14.0" />
+                           </font>
+                       </Button>
+                   </items>
+               <padding>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </padding>
+               </ToolBar>
+           </top>
+           <center>
+               <ScrollPane fx:id="scrollPane" fitToHeight="true" fitToWidth="true" hbarPolicy="NEVER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" pannable="true" prefHeight="560.0" prefViewportHeight="560.0" prefViewportWidth="600.0" prefWidth="600.0" style="-fx-background-color: #ccc;" vbarPolicy="NEVER" BorderPane.alignment="TOP_LEFT">
+                   <content>
+                       <Pane fx:id="pane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1120.0" prefWidth="1200.0" style="-fx-background-color: #fafafa; -fx-border-color: #ccc; -fx-border-width: 1px;">
+                     <effect>
+                        <DropShadow />
+                     </effect>
+                  </Pane>
+                   </content>
+               <padding>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </padding>
+               </ScrollPane>
+           </center>
+           <right>
+               <AnchorPane fx:id="sideBar" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="660.0" prefWidth="300.0" style="-fx-background-color: #2f3136;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="40.0" BorderPane.alignment="TOP_RIGHT">
+                  <children>
+                      <fx:include fx:id="idShapeEdit" source="shapeEdit.fxml" />
+                  </children>
+               <opaqueInsets>
+                  <Insets />
+               </opaqueInsets>
+               <padding>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </padding>
+               <BorderPane.margin>
+                  <Insets />
+               </BorderPane.margin>
+               </AnchorPane>
+           </right>
+           <bottom>
+              <HBox fillHeight="false" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="100.0" prefWidth="900.0" style="-fx-background-color: #36393f;" BorderPane.alignment="TOP_LEFT">
+                 <children>
+                     <Label fx:id="scaleAmountLabel" prefHeight="15.0" prefWidth="131.0" text="Zoom Level: 100%" textFill="#43b480">
+                         <font>
+                             <Font name="System Bold" size="14.0" />
+                         </font>
+                     </Label>
+                     <Label fx:id="mouseCoordinateLabel" prefHeight="14.0" prefWidth="300.0" text="Mouse Position;" textFill="#43b480">
+                         <font>
+                             <Font name="System Italic" size="14.0" />
+                         </font>
+                     </Label>
+                     <Label fx:id="canvasStateLabel" prefHeight="14.0" prefWidth="150.0" text="Current mode:" textFill="#ff3b3b">
+                         <font>
+                             <Font name="System Bold" size="14.0" />
+                         </font>
+                     </Label>
+                 </children>
+               <padding>
+                  <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+               </padding>
+              </HBox>
+           </bottom>
+         </BorderPane>
+   </children>
 </AnchorPane>
