--- a/src/views/offersView.fxml
+++ b/src/views/offersView.fxml
@@ -6,6 +6,7 @@
 <?import model.OfferPropertyType?>
 <?import model.OfferTransactionType?>
 
+<?import javafx.scene.image.ImageView?>
 <AnchorPane prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.OffersController">
    <BorderPane>
       <top>
@@ -25,64 +26,80 @@
          </ScrollPane>
       </center>
       <right>
-         <Pane>
-            <GridPane fx:id="editOfferSidebar" visible="false">
-               <Label text="Property type" GridPane.columnIndex="0" GridPane.rowIndex="0" />
-               <ComboBox GridPane.columnIndex="1" GridPane.rowIndex="0" fx:id="propertyType">
-                  <items>
-                     <FXCollections fx:factory="observableArrayList">
-                        <OfferPropertyType fx:value="FLAT"/>
-                        <OfferPropertyType fx:value="LAND"/>
-                        <OfferPropertyType fx:value="DETACHED"/>
-                        <OfferPropertyType fx:value="TOWNHOUSE"/>
-                        <OfferPropertyType fx:value="BUNGALOW"/>
-                        <OfferPropertyType fx:value="COTTAGE"/>
-                        <OfferPropertyType fx:value="OTHER"/>
-                     </FXCollections>
-                  </items>
-               </ComboBox>
+         <VBox>
+            <Pane maxHeight="560.0">
+               <GridPane fx:id="editOfferSidebar" visible="false">
+                  <Label text="Property type" GridPane.columnIndex="0" GridPane.rowIndex="0" />
+                  <ComboBox GridPane.columnIndex="1" GridPane.rowIndex="0" fx:id="propertyType">
+                     <items>
+                        <FXCollections fx:factory="observableArrayList">
+                           <OfferPropertyType fx:value="FLAT"/>
+                           <OfferPropertyType fx:value="LAND"/>
+                           <OfferPropertyType fx:value="DETACHED"/>
+                           <OfferPropertyType fx:value="TOWNHOUSE"/>
+                           <OfferPropertyType fx:value="BUNGALOW"/>
+                           <OfferPropertyType fx:value="COTTAGE"/>
+                           <OfferPropertyType fx:value="OTHER"/>
+                        </FXCollections>
+                     </items>
+                  </ComboBox>
 
-               <Label text="Transaction type" GridPane.columnIndex="0" GridPane.rowIndex="1" />
-               <ComboBox GridPane.columnIndex="1" GridPane.rowIndex="1" fx:id="transactionType">
-                  <items>
-                     <FXCollections fx:factory="observableArrayList">
-                        <OfferTransactionType fx:value="RENT"/>
-                        <OfferTransactionType fx:value="SELL"/>
-                        <OfferTransactionType fx:value="SHARE"/>
-                     </FXCollections>
-                  </items>
-               </ComboBox>
+                  <Label text="Transaction type" GridPane.columnIndex="0" GridPane.rowIndex="1" />
+                  <ComboBox GridPane.columnIndex="1" GridPane.rowIndex="1" fx:id="transactionType">
+                     <items>
+                        <FXCollections fx:factory="observableArrayList">
+                           <OfferTransactionType fx:value="RENT"/>
+                           <OfferTransactionType fx:value="SELL"/>
+                           <OfferTransactionType fx:value="SHARE"/>
+                        </FXCollections>
+                     </items>
+                  </ComboBox>
 
-               <Label text="Location" GridPane.columnIndex="0" GridPane.rowIndex="2" />
-               <Button mnemonicParsing="false" onAction="#setLocation" text="Select on map" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                  <Label text="Location" GridPane.columnIndex="0" GridPane.rowIndex="2" />
+                  <Button mnemonicParsing="false" onAction="#setLocation" text="Select on map" GridPane.columnIndex="1" GridPane.rowIndex="2" />
 
-               <Label text="Area (m^2)" GridPane.columnIndex="0" GridPane.rowIndex="3" />
-               <TextField fx:id="areaField" GridPane.columnIndex="1" GridPane.rowIndex="3"/>
+                  <Label text="Area (m&#x00B2;)" GridPane.columnIndex="0" GridPane.rowIndex="3" />
+                  <TextField fx:id="areaField" GridPane.columnIndex="1" GridPane.rowIndex="3"/>
 
-               <Label text="Description" GridPane.columnIndex="0" GridPane.rowIndex="4" />
-               <TextArea fx:id="descriptionArea" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+                  <Label text="Price" GridPane.columnIndex="0" GridPane.rowIndex="4" />
+                  <TextField fx:id="priceField" GridPane.columnIndex="1" GridPane.rowIndex="4" />
 
-               <Label text="Price" GridPane.columnIndex="0" GridPane.rowIndex="5" />
-               <TextField fx:id="priceField" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                  <Label text="Description" GridPane.columnIndex="0" GridPane.rowIndex="5" />
+                  <TextArea fx:id="descriptionArea" GridPane.columnIndex="1" GridPane.rowIndex="5" maxHeight="90" />
 
-               <Label text="Title picture" GridPane.columnIndex="0" GridPane.rowIndex="6" />
-               <Button  mnemonicParsing="false" onAction="#loadTitlePic" text="Load file" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+                  <VBox GridPane.columnIndex="0" GridPane.rowIndex="6" >
+                     <Label text="Title picture"/>
+                     <Button  mnemonicParsing="false" onAction="#loadTitlePic" text="Load file" GridPane.columnIndex="0"/>
+                  </VBox>
+                  <GridPane minHeight="150" maxHeight="150" GridPane.columnIndex="1" GridPane.rowIndex="6" >
+                     <ImageView fx:id="titlePicture" preserveRatio="true" fitHeight="160"/>
+                  </GridPane>
 
-               <Label text="Pictures" GridPane.columnIndex="0" GridPane.rowIndex="7" />
-               <Button  mnemonicParsing="false" onAction="#loadOtherPic" text="Load file" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+                  <VBox GridPane.columnIndex="0" GridPane.rowIndex="7" >
+                     <Label text="Pictures"/>
+                     <Button  mnemonicParsing="false" onAction="#loadOtherPic" text="Load file"/>
+                  </VBox>
 
-               <Button  mnemonicParsing="false" onAction="#saveOffer" text="Save" GridPane.columnIndex="0" GridPane.rowIndex="8" />
-               <Button  mnemonicParsing="false" onAction="#deleteOffer" text="Delete" style="-fx-background-color: red;" textFill="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="8" />
-            </GridPane>
+                  <ScrollPane maxHeight="170" maxWidth="480" GridPane.columnIndex="1" GridPane.rowIndex="7" vbarPolicy="NEVER">
+                     <HBox fx:id="otherPictures" minHeight="150" maxHeight="150">
 
-            <Pane fx:id="myOffersSidebar" visible="false">
-               <ScrollPane hbarPolicy="NEVER">
-                  <content>
-                     <VBox fx:id="myOffersBox" />
-                  </content>
-               </ScrollPane>
+                     </HBox>
+                  </ScrollPane>
+
+                  <Button  mnemonicParsing="false" onAction="#saveOffer" text="Save" GridPane.columnIndex="0" GridPane.rowIndex="8" />
+                  <Button  mnemonicParsing="false" onAction="#deleteOffer" text="Delete" style="-fx-background-color: red;" textFill="WHITE" GridPane.columnIndex="1" GridPane.rowIndex="8" />
+               </GridPane>
+
+               <Pane fx:id="myOffersSidebar" visible="false">
+                  <ScrollPane hbarPolicy="NEVER" maxHeight="560.0">
+                     <content>
+                        <VBox fx:id="myOffersBox" />
+                     </content>
+                  </ScrollPane>
+               </Pane>
             </Pane>
-         </Pane>
+            <Label fx:id="errorLabel" textFill="RED"/>
+         </VBox>
       </right>
    </BorderPane>
 </AnchorPane>
