--- a/src/views/loginView.fxml
+++ b/src/views/loginView.fxml
@@ -18,9 +18,9 @@
         <Label layoutX="45.0" layoutY="117.0" text="Service tag" />
         <TextField fx:id="tagField" layoutX="125.0" layoutY="113.0" text="orclpdb" />
         <Label layoutX="45.0" layoutY="150.0" text="User" />
-        <TextField fx:id="userField" layoutX="125.0" layoutY="146.0" promptText="login" />
+        <TextField fx:id="userField" layoutX="125.0" layoutY="146.0" promptText="login" text="xmarko15"/>
         <Label layoutX="45.0" layoutY="184.0" text="Password" />
-        <PasswordField fx:id="pwdField" layoutX="125.0" layoutY="180.0" promptText="password" />
+        <PasswordField fx:id="pwdField" layoutX="125.0" layoutY="180.0" promptText="password" text="tKZNZeuo"/>
         <Button fx:id="connectBtn" layoutX="125.0" layoutY="217.0" mnemonicParsing="false" text="Connect" onAction="#connectToDb" />
 
         <Separator layoutX="-14.0" layoutY="259.0" prefHeight="0.0" prefWidth="355.0" />
